--- a/templates/main.html
+++ b/templates/main.html
@@ -3,8 +3,8 @@
 
     <div class='btn-toolbar'>
       <div class='btn-group'>
-        <button class='btn connect' rv-on-click="toggleConnected" rv-text="toggleConnectedText < context.state.current"></button>
-        <button class='btn play' rv-disabled="context.isDisconnected < state.current">Play/pause</button>
+        <button class='btn connect' rv-on-click="toggleConnect" rv-text="connectText < context.state.current">Connect/disconnect</button>
+        <button class='btn play' rv-on-click="togglePlay" rv-disabled="context.isDisconnected < state.current" rv-text="playText < context.state.current">Play/pause</button>
         <button class='btn'>...</button>
       </div>
 
