--- a/templates/main.html
+++ b/templates/main.html
@@ -1,46 +1,58 @@
-<div class="inset-panel">
+<div class="inset-panel rd-commands">
   <div class="panel-body padded">
 
     <div class='btn-toolbar'>
       <div class='btn-group'>
-        <button class='btn connect' rv-on-click="toggleConnect" rv-text="connectText < context.state.current">Connect/disconnect</button>
-        <button class='btn play' rv-on-click="togglePlay" rv-disabled="context.isDisconnected < state.current" rv-text="playText < context.state.current">Play/pause</button>
-        <button class='btn'>...</button>
+        <button class='btn connect' rv-on-click="toggleConnect" rv-text="connectText < context.state.current">
+          Connect/disconnect
+        </button>
       </div>
-
       <div class='btn-group'>
-        <button class='btn'>...</button>
-        <button class='btn'>...</button>
+        <button class='btn play' rv-on-click="togglePlay" rv-disabled="context.isDisconnected < state.current" rv-title="playText < context.state.current">
+          <span rv-class="playIconClass < context.state.current"></span>
+        </button>
+        <button class='btn step-over' title="Step over">
+          <span class="rd-icon-step-over"></span>
+        </button>
+        <button class='btn step-in' title="Step in">
+          <span class="rd-icon-step-in"></span>
+        </button>
+        <button class='btn step-out' title="Step out">
+          <span class="rd-icon-step-out"></span>
+        </button>
+        <button class='btn deactivate' title="Deactivate breakpoints">
+          <span class="rd-icon-breakpoints-deactivate"></span>
+        </button>
       </div>
     </div>
 
   </div>
 </div>
-<div class="inset-panel">
+<div class="inset-panel rd-watch-expressions">
   <div class="panel-heading">Watch Expressions</div>
   <div class="panel-body padded">
 
   </div>
 </div>
-<div class="inset-panel">
+<div class="inset-panel rd-variables">
   <div class="panel-heading">Variables</div>
   <div class="panel-body padded">
 
   </div>
 </div>
-<div class="inset-panel">
+<div class="inset-panel rd-call-stack">
   <div class="panel-heading">Call Stack</div>
   <div class="panel-body padded">
 
   </div>
 </div>
-<div class="inset-panel">
+<div class="inset-panel rd-console">
   <div class="panel-heading">Console</div>
   <div class="panel-body padded">
 
   </div>
 </div>
-<div class="inset-panel">
+<div class="inset-panel rd-breakpoints">
   <div class="panel-heading">Breakpoints</div>
   <div class="panel-body padded">
 
