--- a/templates/main.html
+++ b/templates/main.html
@@ -3,8 +3,8 @@
 
     <div class='btn-toolbar'>
       <div class='btn-group'>
-        <button class='btn connect' rv-on-click="toggleConnect" rv-text="connectText < context.state.current">
-          Connect/disconnect
+        <button class='btn connect' rv-on-click="toggleConnect">
+          { connectText < context.state.current }
         </button>
       </div>
       <div class='btn-group'>
@@ -30,31 +30,38 @@
 </div>
 <div class="inset-panel rd-watch-expressions">
   <div class="panel-heading">Watch Expressions</div>
-  <div class="panel-body padded">
+  <div class="panel-body">
 
   </div>
 </div>
 <div class="inset-panel rd-variables">
   <div class="panel-heading">Variables</div>
-  <div class="panel-body padded">
+  <div class="panel-body">
 
   </div>
 </div>
 <div class="inset-panel rd-call-stack">
   <div class="panel-heading">Call Stack</div>
-  <div class="panel-body padded">
+  <div class="panel-body">
+
+    <table>
+      <tr rv-each-frame="context.backtrace" rv-class-current="frame.current">
+        <td class="row-no">{ frame.no }</td>
+        <td class="row-file">{ frame.file }:{ frame.line }</td>
+      </tr>
+    </table>
 
   </div>
 </div>
 <div class="inset-panel rd-console">
   <div class="panel-heading">Console</div>
-  <div class="panel-body padded">
+  <div class="panel-body">
 
   </div>
 </div>
 <div class="inset-panel rd-breakpoints">
   <div class="panel-heading">Breakpoints</div>
-  <div class="panel-body padded">
+  <div class="panel-body">
 
   </div>
 </div>
