--- a/templates/main.html
+++ b/templates/main.html
@@ -30,19 +30,19 @@
 </div>
 
 <div class="rd-scroll-area">
-  <div class="inset-panel rd-watch-expressions">
+  <div class="inset-panel rd-watch-expressions" rv-toggle-panel="panels.watchExprs">
     <div class="panel-heading">Watch Expressions</div>
     <div class="panel-body">
 
     </div>
   </div>
-  <div class="inset-panel rd-variables">
+  <div class="inset-panel rd-variables" rv-toggle-panel="panels.variables">
     <div class="panel-heading">Variables</div>
     <div class="panel-body">
 
     </div>
   </div>
-  <div class="inset-panel rd-call-stack">
+  <div class="inset-panel rd-call-stack" rv-toggle-panel="panels.callStack">
     <div class="panel-heading">Call Stack</div>
     <div class="panel-body">
 
@@ -55,13 +55,13 @@
 
     </div>
   </div>
-  <div class="inset-panel rd-console">
+  <div class="inset-panel rd-console" rv-toggle-panel="panels.console">
     <div class="panel-heading">Console</div>
     <div class="panel-body">
 
     </div>
   </div>
-  <div class="inset-panel rd-breakpoints">
+  <div class="inset-panel rd-breakpoints" rv-toggle-panel="panels.breakpoints">
     <div class="panel-heading">Breakpoints</div>
     <div class="panel-body">
 
