--- a/templates/main.html
+++ b/templates/main.html
@@ -49,7 +49,7 @@
       <table>
         <tr rv-each-frame="context.backtrace" rv-class-current="frame.current">
           <td class="row-no">{ frame.no }</td>
-          <td class="row-file">{ frame.file }:{ frame.line }</td>
+          <td class="row-file" rv-html="frame | framePathHtml"></td>
         </tr>
       </table>
 
